@@ -12,6 +12,14 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
+		<lombok.version>1.18.32</lombok.version>
+		
+		<selenium.version>4.20.0</selenium.version>
+		<testng.version>7.4.0</testng.version>
+		<env>qa</env>
+		<suiteXmlFile>testngaddressforextentreport.xml</suiteXmlFile>
   </properties>
   
 
@@ -73,25 +81,68 @@
     <version>5.3.0</version>
 </dependency>
 
+<!-- Log4j2 core -->
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <version>2.20.0</version>
+    </dependency>
 
+    <!-- Log4j2 API -->
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-api</artifactId>
+        <version>2.20.0</version>
+    </dependency>
+
+   <dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-slf4j-impl</artifactId>
+    <version>2.20.0</version>
+</dependency>
+
+
+  
   </dependencies>
   
   
   <build>
     <plugins>
-        <plugin>
-            <artifactId>maven-clean-plugin</artifactId>
-            <version>3.1.0</version>
-            <executions>
-                <execution>
-                    <phase>pre-integration-test</phase>
-                    <goals>
-                        <goal>clean</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
-    </plugins>
-</build>
+       <!-- Compiler plugin with Lombok fix for JDK 17 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.13.0</version>
+				<configuration>
+					<source>17</source>
+					<target>17</target>
+					<fork>true</fork>
+					<compilerArgs>
+						<arg>--add-exports</arg>
+						<arg>
+							jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
+			
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
+				<configuration>
+					<suiteXmlFiles>
+						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+						<suiteXmlFile>${suiteXmlFile1}</suiteXmlFile>
+					</suiteXmlFiles>
+					<systemPropertyVariables>
+						<env>${env}</env>
+					</systemPropertyVariables>
+				</configuration>
+			</plugin>
+			
+			    </plugins>
+  </build>
+ 
 
 </project>
